# cusf-landing-prediction

./: .gitignore  CMakeLists.txt  Makefile  README  config.py  grabdata-cronjob.sh  index.html  kml_footer  kml_header  scenario-template.json  test_scenario.ini
cmake/: CMakeCUDACompiler.cmake.in  CMakeCUDAInformation.cmake  CMakeDetermineCUDACompiler.cmake  CMakeTestCUDACompiler.cmake  FindCUDARuntime.cmake
cmake/Platform/: Linux-nvcc.cmake
css/: hourly.css
getgrib_src/: getgrib.py
js/: hourly.js
pred_src/: CMakeLists.txt  altitude.c  altitude.h  config.h.in  pred.c  run_model.c  run_model.h  wind_data.c  wind_data.h  wind_file.c  wind_files.c
pred_src/util/: random.c  system-info.c  system-info.h  threading.c  threading.h
pred_src/wind/: wind_file.c  wind_file.h  wind_file_cache.c  wind_file_cache.h  wind_files.c  wind_files.h
pydap/: get_wind_data.py
scripts/: README  config.py  grabdata-cronjob.sh  hourly-predictions-cronjob.sh  list-gfs-timestamps.py  run-hourly-predictions.py  scenario-template.json
test/: CMakeLists.txt  scenario-1.ini  scenario-2.ini  scenario.ini
web/hourly-predictions/: index.html
web/hourly-predictions/css/: hourly.css
web/hourly-predictions/js/: hourly.js
web/predict/: index.html  runpred.cgi
web/predict/css/: landpred.css
web/predict/js/: landpred.js
